--- a/examples/project.config.json
+++ b/examples/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.98",
-	"appid": "wx307a52ca028d3c07",
+	"appid": "wxd5a802fde91794ca",
 	"projectname": "iview-weapp",
 	"condition": {
 		"search": {
